@@ -253,6 +253,19 @@ namespace gui
 		*/
 		virtual void setIconFont( IGUIFont* font ) = 0;
 
+		//! Sets a skin independent font.
+		/** \param font: New font to set or 0 to use the skin-font. */
+		virtual void setOverrideFont(IGUIFont* font=0) = 0;
+
+		//! Gets the override font (if any)
+		/** \return The override font (may be 0) */
+		virtual IGUIFont* getOverrideFont(void) const = 0;
+
+		//! Get the font which is used for drawing
+		/** This is the override font when one is set and the
+		font of the skin otherwise. */
+		virtual IGUIFont* getActiveFont() const = 0;
+
 		//! Sets the image list which should be used for the image and selected image of every node.
 		/** The default is 0 (no images). */
 		virtual void setImageList( IGUIImageList* imageList ) = 0;
